--- a/Prj28_Gestionale/src/main/webapp/clienti.html
+++ b/Prj28_Gestionale/src/main/webapp/clienti.html
@@ -20,7 +20,7 @@
 <script type="text/javascript">
 
 const TABELLA = document.getElementById('miaTabella');
-const URL = "http://localhost:8080/Prj28_Gestionale/cliente";
+const URL = "/cliente";
 
 fetch(URL)
 	.then(collezioneJSON => collezioneJSON.json())
